- added chinese translation [Dancefire]
- added french translation [Gilles Accad]
- added german translation [Christian Sagmueller]
- added swedish translation [Daniel Nylander]

Code changes:
- depend on pygtk 2.8 and gnome-python 2.10
- improved build scripts
- generate ChangeLog from subversion log during make dist
- removed gnomemisc module
- don't use deprecated gnome-python modules


2006-02-06: Revelation 0.4.7
============================

Bugfixes:
- don't crash when unlocking file
- ignore errors when automatically reloading file in applet
- avoid hanging on missing network mounts when opening file
- build pyc/pyo files correctly when using DESTDIR with make install


2006-01-26: Revelation 0.4.6
============================

New features:
- improved the searchbar, and use it instead of find dialog
- new applet option to show/hide search entry
- use icons instead of colors in password entries to indicate strength
- added Shannon entropy test and other improvements to password checker

Bugfixes:
- fixed drag and drop undo/redo crashes
- don't initialize python modules during configure checks
- strip xml entities from password on clipboard copy or drag/drop
- fix crash in Password Safe import/export with fields longer than 256 chars
- use full path when starting Revelation from applet
- use correct key path for applet show_passwords gconf schema key
- ~ in filenames will now be expanded to homedir
- changed default file format for export to XML
- changed button "Edit" to "Update" in edit entry dialog
- remove GNOME_RevelationApplet.server during make clean

Code changes:
- use stock gtk icon sizes instead of custom ones


2005-08-25: Revelation 0.4.5
============================

New features:
- added Password Safe 2.x import/export
- added Password Safe 1.x import/export
- added GPass 0.5.x import/export
- added MyPasswordSafe import/export
- added MyPasswordSafe import/export for old file format
- added Password Gorilla import/export

Bugfixes: